Comment out some CSS we no longer need that was causing a big whitespace.

--- a/app/assets/stylesheets/better_homepage/application.css.sass
+++ b/app/assets/stylesheets/better_homepage/application.css.sass
@@ -31,8 +31,9 @@ section#content
   .icon--color-link
     color: #01AED5
 
-  @media (min-width: $media-tablet) and (max-width: $media-wide)
-    margin-top: 10em
+  // I think the newer style guide made this unnecessary...
+  // @media (min-width: $media-tablet) and (max-width: $media-wide)
+  //   margin-top: 10em
 
   .media.story
     .media__figure--widescreen, .media--hp-large
